--- a/RBOT101_2021/Notes/jupyter/chaps1_3.ipynb
+++ b/RBOT101_2021/Notes/jupyter/chaps1_3.ipynb
@@ -981,22 +981,135 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcca99ca-0782-4cbf-8195-891a8e100cd7",
+   "cell_type": "markdown",
+   "id": "c0d3981c-cbd6-4cde-81ed-2e053e9ad3bb",
    "metadata": {
     "id": "fcca99ca-0782-4cbf-8195-891a8e100cd7"
    },
+   "source": [
+    "### Office Hours | August 7, 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c901966f-6b71-43c3-872f-5a2e5568d7ac",
+   "metadata": {
+    "id": "7f98fdac-934a-4bc2-8b22-e165a96bff9d"
+   },
+   "source": [
+    "## Section 4.1\n",
+    "\n",
+    "### Euclidean Metric\n",
+    "\n",
+    "Say we have two points $\\boldsymbol{x} = (3, -3, 5)$ and $\\boldsymbol{y} = (-5, 5, 3)$; find the Euclidean distance between them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0ab87ba5-76cd-466d-acef-6376cfa88cd1",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create an array for the intermediate solution (see eq 4.1.1 & 4.1.2)\n",
+    "interm = [] #0 #\n",
+    "\n",
+    "def euclidean_dist(x, y):\n",
+    "    assert len(x)==len(y), 'x and y must have equal # of components'\n",
+    "    for i in range(len(x)):\n",
+    "        interm.append((x[i] - y[i])**2)\n",
+    "        #interm[i] +=  (x[i] - y[i])**2  #>> perfectly valid as well\n",
+    "    interm_sum = sum(interm)\n",
+    "    answer = math.sqrt(interm_sum)\n",
+    "    \n",
+    "    return answer\n",
+    "\n",
+    "# distance between q and point set P\n",
+    "P = [(1, 2, -1), (2, 1, -2), (3, 4, -2), (5, 3, 2)]\n",
+    "q = [5, -3, 2]\n",
+    "\n",
+    "# Problem: Find distance between P and q\n",
+    "\n",
+    "def dist_pointset(P, q):\n",
+    "    interim= []\n",
+    "    for element in P:\n",
+    "        interim.append(euclidean_dist(element,q))\n",
+    "        \n",
+    "    dist = min(interim)\n",
+    "    return dist\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1df674a7-3336-4677-ab35-2c1d8138670f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Equation 4.1.4\n",
+    "p = [5, -3, 2]\n",
+    "\n",
+    "r1 = (1, 1, 0); r2 = (0, 1, 1);\n",
+    "\n",
+    "def get_xpy(x):\n",
+    "    return x, 1-x\n",
+    "import numpy as np\n",
+    "import numpy.random as npr\n",
+    "\n",
+    "C = [get_xpy(npr.rand(1)[0]) for i in range(100)]\n",
+    "\n",
+    "# for every x and y in C, determine the expression in the norm\n",
+    "\n",
+    "arr = []\n",
+    "for xy in C:\n",
+    "    inner = np.linalg.norm(xy[0]*np.array(r1) + xy[1]*np.array(r2) - np.array(p))\n",
+    "    arr.append(inner)\n",
+    "dist = min(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "31945c71-fd7b-48b0-a1c3-258e6d94c5ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum distance between p and r_1 and r_2 is 6.006412496909996\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Minimum distance between p and r_1 and r_2 is {dist}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "86f8f302-f8c6-421f-a393-58a52387b8cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Classwork: Equations 4.1.5 through 4.1.13\n",
+    "\n",
+    "### Write examples in python/numpy/jupyter notebook/google collab that illustrates these examples\n",
+    "\n",
+    "### Submit no later than Friday"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f98fdac-934a-4bc2-8b22-e165a96bff9d",
-   "metadata": {
-    "id": "7f98fdac-934a-4bc2-8b22-e165a96bff9d"
-   },
+   "id": "a16d3c69-f634-4f57-ac35-c0a6da075274",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
