--- a/RBOT101_2021/homeworks/hwsols.tex
+++ b/RBOT101_2021/homeworks/hwsols.tex
@@ -28,8 +28,8 @@
 \usepackage[pagebackref=true,breaklinks=true,colorlinks=true, citecolor=green,linkcolor=cyan,urlcolor=blue,bookmarks=true]{hyperref}
 
 
-\title{RBOT 250: Homework Solutions}
-\author{Dr. Olalekan Ogunmolu}
+\title{RBOT 101: Assignment II Solutions}
+\author{Dr. Lekan Molu}
 
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png,.eps}
 
@@ -63,7 +63,7 @@
 	
 	\title{Homework Solutions}
 	 
-	\author{Olalekan Ogunmolu}
+	\author{Lekan Molu}
 
 \input{sec/hw1}
 %\input{sec/hw2}
