fixed refs and homework I solutions

--- a/RBOT101_2021/Notes/jupyter/WeekII_Assignments.ipynb
+++ b/RBOT101_2021/Notes/jupyter/WeekII_Assignments.ipynb
@@ -50,7 +50,7 @@
     "Inspecting the above, we see that \n",
     "\n",
     "\\begin{align}\n",
-    "    \\langle \\boldsymbol{x}^1, \\boldsymbol{x}^2 \\rangle = 0, \\quad \\boldsymbol{x}^2, \\boldsymbol{x}^3 \\rangle = 0, \\quad \\boldsymbol{x}^1, \\boldsymbol{x}^3 \\rangle = 0\n",
+    "    \\langle \\boldsymbol{x}^1, \\boldsymbol{x}^2 \\rangle = 0, \\quad \\langle \\boldsymbol{x}^2, \\boldsymbol{x}^3 \\rangle = 0, \\quad \\langle \\boldsymbol{x}^1, \\boldsymbol{x}^3 \\rangle = 0\n",
     "\\end{align}\n",
     "\n",
     "Hence, the vectors $\\boldsymbol{x}^i$ are mutually orthonormal."
@@ -402,8 +402,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c75c9db0-6dc7-48c8-8a55-7f75fb1309f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.857142857142854"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(30/70)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5aa421c9-fad4-4503-b135-818e5869f67a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68.925"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(42.85+95)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4f88ef7e-ad25-4464-b976-fa755aa6813e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "49/70"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "80dabf2a-b7cc-4950-b803-bd3f54670398",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(79+70)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d071cb9-57e7-4d3f-95a3-be557cca4263",
    "metadata": {},
    "outputs": [],
    "source": []
