--- a/RBOT250_2020/Notes/RBOT250.tex
+++ b/RBOT250_2020/Notes/RBOT250.tex
@@ -135,6 +135,6 @@
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
 \bibliographystyle{wafr.bst}
 %\addbibresource{biblio}
-\bibliography{biblio,../../Papers/SRS/Continuum/biblio,../../Papers/iDG/IROS2018/root}
+\bibliography{biblio,../../Papers/iDG/IROS2018/root}
 
 \end{document}
