--- a/RBOT250_2020/Notes/sections/robo_confs.tex
+++ b/RBOT250_2020/Notes/sections/robo_confs.tex
@@ -214,3 +214,5 @@ This special nature of \eqref{eq:mob_cond_planar} arises because the joints' fre
 	\caption{\textit{Left}: A Parallel Planar Robot Mechanism. \textit{Right:} Workspace of the mechanism.}
 	\label{fig:para_mech}
 \end{figure}
+
+In analyzing the mechanism of \autoref{fig:para_mech}, please consider the following mechanism design parameters. This robot  is made up of four RPRP-type kinematic chains. Three of these chains along with the prismatic pairs closest to the U-joints on the base serve as active joints; the fourth kinematic chain is passive. The fixed platform shown consists of the quadrilateral $A_1 \, A_2 \, A_3 \, A_4$ with sides $a$ and $b$. The center of the frame is denoted by $O_{xy}$, which is located at a fixed coordinate system at point $A_1$. Its $x$- and $z$- axes are defined in the plane of the quadrilateral $A_1 \, A_2 \, A_3 \, A_4$, so that the $y$-axis points up. Points $A_i$ and $B_i$ are separated their kinematic chain by a variable distance $q_i$ --  the linear displacement of the $i$-th active prismatic joint. $B_1$ and $B_3$ are connected by a rod perpendicular to the one that connects $B_2$ and $B_4$. Either rod is connected to the mobile platform with prismatic joints, separated from one another by a vertical offset $h$. We can consider point $P = (P_x, P_y, P_z)$, strategically placed at the intersection points of the respective rods of the mobile platform, as the end-effector of the moving platform. Let $\hat{u}_i$ denote the revolute joints positioned at points $A_i$ and $B_i$. Consider that for the locations $i=1,3$, rotational joints are parallel to the $x$-axis; and for $i=2,4$, these joints are parallel to the $z$-axis. In the same kinematic chain, the traslation axis. $\hat{\omega}_i$ of the active joint is perpendicular to the rotary joint $\hat{u}$.
