--- a/RBOT250_2020/homeworks/hwsols.tex
+++ b/RBOT250_2020/homeworks/hwsols.tex
@@ -29,7 +29,9 @@
 
 
 \title{RBOT 250: Homework Solutions}
-\author{Dr. Olalekan Ogunmolu}
+\author{Dr. Lekan Molu}
+% activate no dash in reference names 
+\bstctlcite{IEEEexample:BSTcontrol}
 
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png,.eps}
 
@@ -58,16 +60,10 @@
 \begin{document}
 	\maketitle
 	
-	% activate no dash in reference names 
-	\bstctlcite{IEEEexample:BSTcontrol}
-	
-	\title{Homework Solutions}
-	 
-	\author{Olalekan Ogunmolu}
 
 \input{sec/hw1}
-\input{sec/hw2}
-\input{sec/hw3}
+%\input{sec/hw2}
+%\input{sec/hw3}
 
 % ---- Bibliography ----
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
