--- a/RBOT101_2021/Notes/jupyter/chaps1_3.ipynb
+++ b/RBOT101_2021/Notes/jupyter/chaps1_3.ipynb
@@ -1107,8 +1107,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a16d3c69-f634-4f57-ac35-c0a6da075274",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/c/Users/lekanmolu/Documents/Brandeis/RBOT101_2021/Notes/jupyter'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd62922-5b1c-4b50-8893-8b40ac280b9d",
    "metadata": {},
    "outputs": [],
    "source": []
