--- a/RBOT250_2020/homeworks/sec/hw1.tex
+++ b/RBOT250_2020/homeworks/sec/hw1.tex
@@ -5,13 +5,13 @@ Using the mobility condition, determine and explain why the SCARA robot of Fig 2
 \end{homework}
 
 \begin{solution}
-	We have the following general equation from the mobility condition:
+	We have the following general equation for a mechanism's mobility condition:
 	\begin{align}
 	\mathfrak{M} = 6(n - g - 1) + \sum_{i=1}^{g} f_i.
 	\label{eq:mobility}
 	\end{align}
 	%
-	where $n$ is the number of links, $g$ is the total number of joints and $f_i$  are the respective relative degrees of freedoms of the individual joints. The SCARA manipulator has three joints with an $RRP$ configuration \ie, $g=3$. These connect four links (including the end-effector) so that $n = 4$. Each of the joints have $f_i=1$. Plugging these into \eqref{eq:mobility}, we find that
+	where $n$ is the number of links, $g$ is the total number of joints, and $f_i$  are the respective relative degrees of freedoms of the individual joints. The SCARA manipulator has three joints with an $RRP$ configuration \ie, $g=3$. These connect four links (including the end-effector) so that $n = 4$. Each of the joints have freedoms, $f_i=1$. Plugging these into \eqref{eq:mobility}, we find that
 	%
 	\begin{align}
 	\mathfrak{M} = 6(4-3-1) + \sum_{i=1}^3 f_i = 3
@@ -22,14 +22,14 @@ Using the mobility condition, determine and explain why the SCARA robot of Fig 2
 
 \begin{homework}{Parallel Robot Mechanism Analysis}
 \newline 
-With the \textit{{Gr\"ubler-Kutzbach's} mobility condition} that we have learned, analyze the mobility criteria of the mechanism of \autoref{fig:para_mech}. Hint: This mechanism is made up of two chains: chains $A_3\, B_3\, B_1\, A_1$ and $A_2\, B_2\, B_4\, A_4$, and there is a fixed distance between the $U$-joints, $A_2\, A_3$ as well as $A_1, A_4$.
+With the \textit{{Gr\"ubler-Kutzbach's} mobility condition} that we have learned, analyze the mobility criteria of the mechanism of \autoref{fig:para_mech}. Hint: This mechanism is made up of two chains: chains $A_3\, B_3\, B_1\, A_1$ and $A_2\, B_2\, B_4\, A_4$, and there is a fixed distance between the $U$-joints, $A_2\, A_3$ as well as $A_1, A_4$. 
 
 \begin{figure}[tbph!]
 	\centering
 	\begin{tabular}{@{}c@{}c@{}}
-		\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{../lec_notes/figures/parallel_translational.png} \,\,
+		\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{../Notes/figures/parallel_translational.png} \,\,
 		&
-		\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{../lec_notes/figures/parallel_translational_workspace.png}
+		\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{../Notes/figures/parallel_translational_workspace.png}
 	\end{tabular}
 	\caption{\textit{Left}: A Parallel Planar Robot Mechanism. \textit{Right:} Workspace of the mechanism.}
 	\label{fig:para_mech}
@@ -38,7 +38,7 @@ With the \textit{{Gr\"ubler-Kutzbach's} mobility condition} that we have learned
 
 \begin{solution}This robot has four RPRP-type kinematic chains. Three of these chains have their prismatic pair closest to the base; they serve as active joints. The fourth kinematic chain is completely passive. Points $B_1$ and $B_2$ are connected by a rod, which is perpendicular to the rod that connects points $B_2$ and $B_4$. Both rods are connected to the moving platform by prismatic joints, which are separated from each other by a vertical offset $h$. Point $P = (P_x,P_y, P_z)$ is the interconnecting point for all the chains on the mobile platform and the top rods. Notice that the rotational axes of the revolute joints \ie, $\bm{\hat{u}}_i$ are parallel to the x-axes of joints 1 and 3; also, they are parallel to the z-axis for joints 2 and 4. 
 	
-	There are many ways of solving this mobility problem. However, note that this mechanism has multiple closed loops and care must be taken when using the formulas we have introduced in our notes. Here, I will be using Gogu's method as proposed in ~\cite{Gogu}. It decomposes the mechanism into the different closed loops in order to properly analyze the mobility constraint. The mobility of the mechanism is 
+There are many ways of solving this mobility problem. However, note that this mechanism has multiple closed loops and care must be taken when using the formulas we have introduced in our notes. Here, I will be using Gogu's method as proposed in ~\cite{Gogu}. It decomposes the mechanism into the different closed loops in order to properly analyze the mobility constraint. The mobility of the mechanism is 
 	%
 	\begin{align}
 	\mathfrak{M} = \sum_{i=1}^{g} f_i - r
@@ -47,45 +47,45 @@ With the \textit{{Gr\"ubler-Kutzbach's} mobility condition} that we have learned
 	with $r$ being the number of joint parameters that lose independence after closing the loops of the mechanism. We define $r$ as 
 	%
 	\begin{align}
-	r = \sum_{j=1}^{k}SH_j - SF  r_l
+	r = \sum_{j=1}^{k}C_j - \bar{C}  r_l
 	\end{align}
 	%
-	where $k$ is the number of closed-loops in the mechanism, $SH_j$ is the connectivity of the $j$'th closed loop $H_j$ when separated from  the mechanism; SF is the overall connectivity of the mechanism and $r_l$ is the total number of parameters that lose independence in the closed loops. We may find the variables as follows
+	where $k$ is the number of closed-loops in the mechanism, $C_j$ is the connectivity of the $j$'th closed loop, $L_j$ when separated from  the mechanism; $\bar{C}$ is the overall connectivity of the mechanism and $r_l$ is the total number of parameters that lose independence in the closed loops. We may find the variables as follows
 	%
 	\begin{align}
-	SH_j = \text{dim}(RH_j), \quad SF = \text{dim} (RF), \quad r_l = \sum_{j=1}^{k} r_l^{H_j}
+	C_j = \text{dim}(\xi_j), \quad \bar{C} = \text{dim} (\bar{\xi}), \quad r_l = \sum_{j=1}^{k} r_l^{L_j}
 	\end{align}
 	%
-	where $RH_j$ is the velocity vector associated with the interest point $P$ in a closed loop $H_j$; RF is the resultant velocity vector formed from the intersection of $RH_j$ \ie $RF = RH_1 \cap RH_2 \ldots \cap RH_k$ and $r_l^{H_j}$ is the number of parameters that lose independence in the loop $H_j$. We define the variable $r_h^{H_j}$ as 
+	where $\xi_j$ is the velocity vector associated with the interest point $P$ in a closed loop $L_j$; $\bar{\xi}$ is the resultant velocity vector formed from the intersection of $\xi_j$ \ie $\bar{\xi} = \xi_1 \cap \xi_2 \ldots \cap \xi_k$ and $r_l^{L_j}$ is the number of parameters that lose independence in the loop $L_j$. We define the variable $r_h^{L_j}$ as 
 	%
 	\begin{align}
-	r_l^{H_j} = SG_1^{H_j} + SG_2^{H_j} - SF_{H_j} 
+	r_l^{L_j} = \Theta_1^{L_j} + \Theta_2^{L_j} - \bar{C}_{L_j} 
 	\end{align}
 	%
-	with $SG_i^{H_j}, i = 1,2$ being the connectivity of $G_i^{H_j}$ in $H_j$, whereas $SF_{H_j}$ is the loop's connectivity. We define
+	with $\Theta_i^{L_j}, i = 1,2$ being the connectivity of $G_i^{L_j}$ in $L_j$, whereas $\bar{C}_{L_j}$ is the loop's connectivity. We define
 	%
 	\begin{align}
-	SG_i^{H_j} = \text{dim} \left(RG_{1,2}^{H_j}\right), \quad SF_{H_j} = \text{dim}\left(RF_{H_j}\right)
+	\Theta_i^{L_j} = \text{dim} \left(\eta_{1,2}^{L_j}\right), \quad \bar{C}_{L_j} = \text{dim}\left(\bar{\xi}_{L_j}\right)
 	\end{align}
 	%
-	where $RG_i^{H_j}$ are the velocity vectors for $G_i^{H_j}$ and $RF_{H_j}$ is the resultant velocity vector formed by the intersection of the $RG_i^{H_j}$s.
+	where $\eta_i^{L_j}$ are the velocity vectors for $G_i^{L_j}$ and $\bar{\xi}_{L_j}$ is the resultant velocity vector formed by the intersection of the $\eta_i^{L_j}$s.
 	
-	For this mechanism, we have $g=14$ and $k=2$; furthermore, we have $RH_1 = \{v_x, \, v_y, \, v_z, \, \omega_x\}$ and $RH_2 = \{v_x,\, v_y, \, v_z \}$ so that the loops' connectivity are $SH_1 = 4$ and $SH_2 = 4$. Hence $RF = RH_1 \cap RH_2 = \{v_x, \, v_y, \, v_z\}$ and the mechanism's connectivity is thus $SF = \text{dim} (RF) = 3$.
+	For this mechanism, we have $g=14$ and $k=2$; furthermore, we have $\xi_1 = \{v_x, \, v_y, \, v_z, \, \omega_x\}$ and $\xi_2 = \{v_x,\, v_y, \, v_z \}$ so that the loops' connectivity are $C_1 = 4$ and $C_2 = 4$. Hence $\bar{\xi} = \xi_1 \cap \xi_2 = \{v_x, \, v_y, \, v_z\}$ and the mechanism's connectivity is thus $\bar{C} = \text{dim} (\bar{\xi}) = 3$.
 	
-	If we disconnect the limbs, the velocity vector of $RG_1^{H_1} = RG_2^{H_1} = \{v_x, \, v_z, \, \omega_x\}$ and $RG_1^{H_2} = RG_2^{H_2} = \{v_x, \, v_y, \omega_z \}$, so that the connectivity of each limb is $SG_{1,2}^{H_1} = SG_{1,2}^{H_2} = 3$. Thus,
+	If we disconnect the limbs, the velocity vector of $\eta_1^{H_1} = \eta_2^{H_1} = \{v_x, \, v_z, \, \omega_x\}$ and $\eta_1^{H_2} = \eta_2^{H_2} = \{v_x, \, v_y, \omega_z \}$, so that the connectivity of each limb is $\Theta_{1,2}^{H_1} = \Theta_{1,2}^{H_2} = 3$. Thus,
 	%
 	\begin{align}
-	RF_{H_1} &= RG_1^{H_1} \cap RG_2^{H_1} = \{ v_x \, v_z \, \omega_x\}, \nonumber \\
+	\bar{\xi}_{H_1} &= \eta_1^{H_1} \cap \eta_2^{H_1} = \{ v_x \, v_z \, \omega_x\}, \nonumber \\
 	%
-	RF_{H_2} &= RG_1^{H_2} \cap RG_2^{H_2} = \{ v_x \, v_z \, \omega_z\}
+	\bar{\xi}_{H_2} &= \eta_1^{H_2} \cap \eta_2^{H_2} = \{ v_x \, v_z \, \omega_z\}
 	\end{align}
 	%
-	so that $SG_{H_1} = SF_{H_2} = 3$.
+	so that $\Theta_{H_1} = \bar{C}_{H_2} = 3$.
 	%
 	Moreover, we see that $r_l^{H_1} = r_l^{H_2} = 3$ and $r_l = 6$. Thus, we have
 	%
 	\begin{align}
-	r = SH_1 + SH_2 - SF + r_l = 11.
+	r = C_1 + C_2 - \bar{C} + r_l = 11.
 	\end{align}
 	%
 	Since p = 14 and $f_i = 1$, we have 
