--- a/RBOT250_2020/Notes/sections/robo_confs.tex
+++ b/RBOT250_2020/Notes/sections/robo_confs.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}  
  \label{chap:back}
  
- We are chiefly concerned with \textit{rigid bodies} and occasionally \textit{semi-rigid} or \textit{soft} bodies connected together by \textit{joints}.   In general, we take robots to be \textit{mechanisms} that are made up of \textit{links} connected to one another by \textit{joints}.  Typically, the joints connect two or more links and are formed by simple contact with adjacent bodies.  Sometimes, the joints may be flexible -- whether by belt, band, spring or some kind of elastic component such as bellows, diaphragms, tendons~\cite{Bern17ACM}, fiber-reinfoced elastomers~\cite{BishopFREE2012}, resilient pads, strip, or bush. The assembly formed after the various connections between links and joints are called  a \textit{kinematic chain}. 
+ We are chiefly concerned with \textit{rigid bodies} and occasionally \textit{semi-rigid} or \textit{soft} bodies connected together by \textit{joints}.   In general, we take robots to be \textit{mechanisms} that are made up of \textit{links} connected to one another by \textit{joints}.  Typically, the joints connect two or more links and are formed by simple contact with adjacent bodies.  Sometimes, the joints may be flexible -- whether by belt, band, spring, or some kind of elastic component such as bellows, diaphragms, tendons~\cite{Bern17ACM}, fiber-reinforced elastomers~\cite{BishopFREE2012}, resilient pads, strip, or bush. 
  
  \begin{figure}[b!]
  	\centering
@@ -14,7 +14,7 @@
  	\label{fig:robot_arms}
  \end{figure}
  %
-A kinematic chain is a form of a \textit{mechanism}. A ``\textit{mechanism can be interpreted as a means of transmitting, controlling, or constraining relative movement}"~\cite{HuntBook1977}. The term \textit{kinematics} is generally used to describe the motion of a rigid body in space. It also applies to the motion of a semi-rigid or a  completely soft robot in space.  The rigid, semi-rigid or completely soft kinematic systems that allow a body to exhibit motion under a/some controlled motion of its freedom in space with respect to a fixed base frame are what we describe in this module.
+The assembly formed after the various connections between links and joints is called  a \textit{kinematic chain}. A kinematic chain is a form of a \textit{mechanism}. A ``\textit{mechanism can be interpreted as a means of transmitting, controlling, or constraining relative movement}"~\cite{HuntBook1977}. The term \textit{kinematics} is generally used to describe the motion of a rigid body in space. It also applies to the motion of a semi-rigid or a  completely soft robot in space.  The rigid, semi-rigid, or completely soft kinematic systems that allow a body to exhibit motion under a controlled motion of its freedom in space with respect to a fixed base frame are what we describe in this module.
  %
 
 \begin{figure}[tb!]
@@ -24,15 +24,19 @@ A kinematic chain is a form of a \textit{mechanism}. A ``\textit{mechanism can b
 		&
 		\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{figures/soft_parallel.png}
 	\end{tabular}
-	\caption{Soft Robot Manipulators \textit{Left:} An octopus inspired soft robot. Robots classified under muscular hydrostats. \copyright Cecilia Laschi. \textit{Right:} A soft parallel robot manipulator ~\cite{hopkins2015synthesis}.}
+	\caption{Soft Compliant Manipulators. \textit{Left:} An octopus-inspired soft robot (classified under muscular hydrostats). \copyright Cecilia Laschi. \textit{Right:} A soft parallel robot manipulator ~\cite{hopkins2015synthesis}.}
 	\label{fig:soft_robots}
 \end{figure}
 
- \section{Robots Components}
+ \section{Robot Configurations}
  
-The joints of a robot can be \textit{revolute} or \textit{prismatic}. Revolute joints allow rotation about a fixed axis between two or more links while prismatic joints allow a linear motion about an \textit{axis} -- which is between two links. Symbolically, the revolute joint is denoted by $R$ while the prismatic joint is denoted by $P$. By this logic, it follows that a robot made up of three links that are connected by a prismatic joint would be characterized as a $PPP$ arm, while a three link arm whose links are all connected by three rotary joints would be denoted as an $RRR$ arm. 
+The joints of a robot can be \textit{revolute} or \textit{prismatic}. Revolute joints allow rotation about a fixed axis between two or more links, while prismatic joints allow a linear motion about an \textit{axis} -- which is between two links. Symbolically, the revolute joint is denoted by $R$ while the prismatic joint is denoted by $P$. By this logic, it follows that a robot made up of three links that are connected by a prismatic joint would be characterized as a $PPP$ arm, while a three link arm whose links are all connected by three rotary joints would be denoted as an $RRR$ arm. 
  
- A mathematical way to abstract the interconnection between the links of a robot arm is to denote the axis of rotation or the axis of translation by $z_i$ for the joint that connects link $i$ to link $i+1$. When we characterize the robot's motion, it often helps to work in a so-called \textit{generalized coordinate}. Now consider a rigid body such as a link of a robot arm for example. This link contains myriads of particles, with each particle having its own position and orientation in the world. How can we describe the motion of this rod given its infinitely many particulate matter? For rigid bodies, classical mechanics comes to the rescue. As such, for a revolute joint of a rigid robot manipulator for example, the generalized coordinate is often the \textit{joint angle} $\theta$, while for a prismatic joint it is the link length $d$ -- representing the relative displacement between adjacent links. When the body we speak of is a continuum, the motion of each particle within a link needs to be accounted for. In such scenarios, researchers often work with a so-called a \href{http://web.mit.edu/hyperbook/Patrikalakis-Maekawa-Cho/node25.html}{Frenet-Serret} frame that models  a curve on the soft robot's surface -- with or without torsion. This simplifies the dynamics and kinematics of the system and the specification of these generalized coordinates uniquely determines the position of all the particles (in a material sense for a rigid system) that make up the robot. For more examples on parameterizing soft robots, please look through some of the following references: \cite{Ogunmolu15CASE}, \cite{Hannan2000} \cite{Ogunmolu16CASE}, \cite{Renda2018ICRA}, \cite{ShepherdMultigait}, \cite{Hannan2003}, \cite{Ogunmolu17IROS}, \cite{Laschi15NeuNet}, \cite{Ogunmolu19RALI}, \cite{Renda2014Cosserat}, \cite{Ogunmolu19RALII}, \cite{OgunmoluThesis}.
+ A mathematical way to abstract the interconnection between the links of a robot arm is to denote the axis of rotation or the axis of translation by $z_i$ for the joint that connects link $i$ to link $i+1$. When we characterize the robot's motion, it often helps to work in a so-called \textit{generalized coordinate} -- an independent coordinate system for a system configuration that simplifies the system configuration.
+ 
+Consider a rigid body such as a link of a robot arm for example. This link contains myriads of particles, with each particle having its own position and orientation in the world. How can we describe the motion of this rod given its infinitely many particulate matter? For rigid bodies, classical mechanics comes to the rescue. In classical mechanics, all points within a rigid body have rotational and translational invariance i.e. given an algebra of points on the rigid body, length is preserved across rotational and translational transformations. In general, we like to work with a free parameterization of the motion of such a mechanism. We call such parameterization the generalized coordinate. The generalized coordinate is the \textit{joint angle}, $\theta$, for a rotary joint while for a prismatic joint the generalized coordinate is the link length $d$ -- representing the relative displacement between adjacent links. When the body we speak of is a continuum, the motion of each particle within a link needs to be accounted for. In such scenarios, researchers often work with a so-called a \href{http://web.mit.edu/hyperbook/Patrikalakis-Maekawa-Cho/node25.html}{Frenet-Serret} frame that models  a curve on the soft robot's surface -- with or without torsion. This simplifies the dynamics and kinematics of the system and the specification of these generalized coordinates uniquely determines the position of all the particles (in a material sense for a rigid system) that make up the robot. For more examples on parameterizing soft robots, please look through some of the following references: \cite{Ogunmolu15CASE}, \cite{Hannan2000} \cite{Ogunmolu16CASE}, \cite{Renda2018ICRA}, \cite{ShepherdMultigait}, \cite{Hannan2003}, \cite{Ogunmolu17IROS}, \cite{Laschi15NeuNet}, \cite{Ogunmolu19RALI}, \cite{Renda2014Cosserat}, \cite{Ogunmolu19RALII}, \cite{OgunmoluThesis}.
+ 
+%For a revolute joint of a rigid robot manipulator for example, there are two parameters we can use to characterize the motion of the robot: the link lengths and the angle between the links. 
 % 
  
  \section{Robot Spaces, Geometries, and Classifications}
