--- a/RBOT250_2020/Slides/labs.tex
+++ b/RBOT250_2020/Slides/labs.tex
@@ -88,7 +88,7 @@
 }
 
 \include{sections/intro}
-%\include{sections/background}
+\include{sections/background}
 %\include{sections/immobilization}
 %\include{sections/deformation}
 %\include{sections/multidof}
