--- a/RBOT250_2020/Slides/sections/mechanisms.tex
+++ b/RBOT250_2020/Slides/sections/mechanisms.tex
@@ -1,7 +1,7 @@
-\section{Mechanisms}
+\section{Mechanisms Overview}
 
 \begin{frame}
-	\frametitle{Topics}
+	\frametitle{Outline}
 	\begin{tcolorbox}[coltitle=yellow!50!black,colframe=magenta!25,split=.2,title=Mechanism Components]
 		Freedoms, Constraints, and Mobility.
 		\tcblower
@@ -21,8 +21,8 @@
  
 \begin{frame}
 	\frametitle{Definition of a Mechanism}
-		\begin{definition}[Lekan Molu]
-			A \textcolor{blue}{connection} of  mechanical, magnetic, electrical, hydraulic, or pneumatic components forming an \textcolor{magenta}{assemblage}, meant for moving rigid, semi-rigid or non-rigid bodies via a \textcolor{green}{controlled generation} of \textcolor{red}{motion}.
+		\begin{definition}[Author's Definition]
+			A \textcolor{blue}{connection} of  mechanical, magnetic, electrical, hydraulic, or pneumatic components forming an \textcolor{magenta}{assemblage}, meant for moving rigid, semi-rigid or non-rigid bodies via a \textcolor{green}{controlled generation} of (sometimes) \textcolor{red}{motion}.
 		\end{definition}
 		%
 	\begin{tcolorbox}[coltitle=red!80!black,colframe=magenta!25,title=Kenneth Hunt (1978)]
@@ -59,9 +59,27 @@
 	\end{tabular}
 \end{frame}
 
+
+\begin{frame}
+	\frametitle{Open Kinematic Chains}
+	%	
+	\begin{block}{Chains}
+		Open kinematic chains are based off the anthropomorphic construction of the human hand with cantilevered beam structures.
+	\end{block}
+	\begin{block}{Chain Mechanisms and Error Amplification}
+		Amplifies errors from waist (or base frame) all the way to the tool frame. Control difficult. 
+	\end{block}
+	%
+	\begin{block}{Control}
+		Feedforward control: High power and precision hydraulic actuators for servo motors. \\
+		Sensory feedback control: Force sensing (Ernst, 1962). 
+	\end{block}
+\end{frame}
+
+
 \note{The PUMA arm is the world's first serial kinematic chain. Developer: Victor Scheinman, Stanford student in the `50's. Made several iterations. Patent Rights: Joe Engelberger, (Danbury Unimation, 1961). Joe -- father of robotics -- created world's first robotics company in '61.}
 \begin{frame}
-	\frametitle{Robot Mechanisms}
+	\frametitle{Open Kinematic Robot Mechanisms}
 	\begin{definition}[Ken Salisbury Jr., 1982]
 		``\footnotesize \textit{[Robots are] our fascination with constructing mechanical analogues of ourselves... [this fascination] has led us to place all sorts of hopes and expectations in robot capabilities}."
 	\end{definition}
@@ -71,16 +89,51 @@
 				\includegraphics[width=1.5\textwidth, height=1.5\textwidth]{../Notes/figures/PUMA.jpg} \\
 				\footnotesize{The St{\"a}ubli PUMA Robot (1956).} %Programmable Universal Manipulation Arm.}
 		\end{minipage}
-	%
+		%
 	\end{column}	
-		\begin{column}{5cm}
-			\begin{minipage}[b]{.5\textwidth}
-				\includegraphics[width=1.5\textwidth, height=1.5\textwidth]{../Notes/figures/StanfordArm.jpg}  \\
-				\footnotesize The Stanford Arm (Infolab 1969). %Six degrees of freedom open kinematic chain.
-			\end{minipage}
-		\end{column}
-	\end{columns}
+	\begin{column}{5cm}
+		\begin{minipage}[b]{.5\textwidth}
+			\includegraphics[width=1.5\textwidth, height=1.5\textwidth]{../Notes/figures/StanfordArm.jpg}  \\
+			\footnotesize The Stanford Arm (Infolab 1969). %Six degrees of freedom open kinematic chain.
+		\end{minipage}
+	\end{column}
+\end{columns}
 \end{frame}
+
+\begin{frame}
+	\frametitle{Open Kinematic Chains}
+	%
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=brown!80]
+		Open kinematic chains provide unstructured environmental interaction.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=gray!100]
+		Project MAC, MIT.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=black!80]
+		Tomovic and Boni's pressure sensed grasp.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=pink!100]
+		Binary robot vision system (McCarthy et al, 1963).
+	\end{tcolorbox}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Open Kinematic Chains}
+	%
+	\begin{tcolorbox}[coltitle=cyan!80,colframe=green!100]
+		Stanford Manipulator.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=blue!100]
+		Boston arm.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=red!100]
+		The AMF (American Machines and Foundry) arm.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=yellow!100]
+		General electric's walking robot (1969).
+	\end{tcolorbox}
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Long Walk Towards Direct Drive Robot Arms}
@@ -98,7 +151,7 @@
 	\end{tcolorbox}
 
 	\begin{tcolorbox}[coltitle=magenta!80!green,colframe=brown!80!green]
-		 With gear reduction came backlash, friction, and associated expense.
+		 With gear reduction came backlash, friction, and associated expenses.
 	\end{tcolorbox}
 \end{frame}
 
@@ -108,11 +161,14 @@
 
 \begin{frame}
 	\frametitle{Direct Drive Robot Mechanism: CMU DD I Arm}
+	\begin{tcolorbox}[coltitle=blue!80!yellow,colframe=brown!80!green]
+		Along came Harry Asada.
+	\end{tcolorbox}
 	\begin{columns}[t]	
 		%
 		\begin{column}{.45\columnwidth}
 			\begin{minipage}[b]{\textwidth}
-				\includegraphics[width=1.2\textwidth, height=1.5\textwidth]{figures/cmu_arm.jpg} \\
+				\includegraphics[width=1.2\textwidth, height=1.2\textwidth]{figures/cmu_arm.jpg} \\
 				\footnotesize{Arm Schematics Transmission} %Programmable Universal Manipulation Arm.}
 		\end{minipage}
 		%
@@ -120,7 +176,7 @@
 	%
 	\begin{column}{.45\columnwidth}
 		\begin{minipage}[b]{\textwidth}
-			\includegraphics[width=1.2\textwidth, height=1.5\textwidth]{figures/dd_joints.jpg} \\
+			\includegraphics[width=1.2\textwidth, height=1.2\textwidth]{figures/dd_joints.jpg} \\
 			\footnotesize{Joint schematic} %Programmable Universal Manipulation Arm.}
 	\end{minipage}
 	%
@@ -139,20 +195,18 @@
 		\end{minipage}
 		%
 	\end{column}
-				\begin{column}{.45\columnwidth}
-					\begin{minipage}[b]{\textwidth}
-						\includegraphics[width=1.2\textwidth, height=1.5\textwidth]{figures/dd_load_joints.jpg} \\
-						\footnotesize{Errors Transmission} %Programmable Universal Manipulation Arm.}
-				\end{minipage}
-				%
-			\end{column}
-	\end{columns}
-\end{frame}
+	\begin{column}{.45\columnwidth}
+		\begin{minipage}[b]{\textwidth}
+			\includegraphics[width=1.2\textwidth, height=1.5\textwidth]{figures/dd_load_joints.jpg} \\
+			\footnotesize{Errors Transmission} %Programmable Universal Manipulation Arm.}
+		\end{minipage}
+	\end{column}
+	\end{columns}\end{frame}
 
 
 \note{First direct-drive robot without a gearbox. Selective compliance in X-Y directions given its articulated jointed arms. One-freedom motion along $Z$ direction given its constrained arm New generations such as Cobra i600/i800 include power amplifiers, system and servo controls etc embedded in the robot's base. Kuka Scara arm: Lightweight, fast, powerful, low maintenance, energy consumption, investment costs etc.}
 \begin{frame}
-	\frametitle{Robot Mechanisms}
+	\frametitle{SCARA Robot Mechanisms}
 	\begin{columns}[t]	
 		\begin{column}{5cm}
 			\begin{minipage}[b]{.5\textwidth}
@@ -173,47 +227,38 @@
 
 
 \begin{frame}
-	\frametitle{Open Kinematic Chains}
-	%	
-	\begin{block}{Chains}
-		Open kinematic chains are based off the anthropomorphic construction of the human hand with cantilevered beam structures.
-	\end{block}
-%	\begin{description}
-%		\item[The PUMA arm]  World's first serial kinematic chain 
-%		\item [Developer:] Victor Scheinman, Stanford `50's
-%		\item [Patent Rights:] Joe Engelberger, (Danbury Unimation, 1961).
-%	\end{description}
+	\frametitle{Serial mechanisms research in the 80's}
 	%
-	\begin{block}{Chain Mechanism}
-		 Amplifies errors from waist to tool frame. Control difficult. 
-	\end{block}
-	%
-	\begin{block}{Control}
-		Feedforward control: High power and precision hydraulic actuators for servo motors. \\
-		Sensory feedback control: Force sensing (Ernst, 1962). 
-	\end{block}
+	\tcbset{coltitle=cyan!80,colframe=gray!80!green,title=Mechanisms in the 80's,
+		enlarge left by=-5mm,enlarge right by=0mm,width=\linewidth+5mm}
+	\begin{tcolorbox}[toggle enlargement=none]
+		With the 80's came the arrival of PCs. Lots of research went into computational algorithms for the kinematics and kinetics of (mostly) anthropomorphic robot arms.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=magenta!70,colframe=blue!80!red,title=Active control schemes,toggle enlargement=forced]
+		Efficient recursive Lagrangian and computational methods for the gravitational and Coriolis forces in Newton-Euler equations.
+	\end{tcolorbox}
+	\begin{tcolorbox}[coltitle=pink!70,colframe=gray!80!red,title=Feedback Linearization,toggle enlargement=evenpage]
+		Dynamics feedback linearization for precise bounds on manipulator performance.
+	\end{tcolorbox}
 \end{frame}
 
-
 \begin{frame}
-	\frametitle{Open Kinematic Chains}
+	\frametitle{Serial mechanisms research in the 90's}
 	%
-	\begin{columns}[t]
-		\begin{column}{.5\columnwidth}
-			\begin{description}
-				\item Unstructured environmental interaction;
-				\item Project MAC, MIT;
-				\item Tomovic and Boni's pressure sensed grasp;
-				\item Binary robot vision system (McCarthy et al, 1963).
-			\end{description}
+	\tcbset{coltitle=pink!80,colframe=gray!80,title=Robotworld,
+		enlarge left by=-5mm,enlarge right by=0mm,width=\linewidth+5mm}
+	\begin{tcolorbox}[title=Automatix,toggle enlargement=none]
+		Reconfigurable robots for various assembly ops.
+	\end{tcolorbox}
+	\begin{columns}[b]
+		\begin{column}{.48\columnwidth}			
+			\begin{tcolorbox}[colframe=blue!80!green, coltitle=white!80,toggle enlargement=none]
+				First industrial-scale re-configurable robot and with machine vision components. RAIL scripting OS originally based on Motorola 68000, later on replaced by Apple Macintosh II. 
+			\end{tcolorbox}
 		\end{column}
-	\begin{column}{.5\columnwidth}
-	\begin{description}
-		\item Stanford Manipulator;
-		\item Boston arm;
-		\item The AMF (American Machines and Foundry) arm;
-		\item General electric's walking robot (1969)
-		\end{description}
-\end{column}
+		\begin{column}{.52\columnwidth}
+			\includegraphics[width=\textwidth]{figures/Automatix.jpg}
+			\copyright Wikipedia
+		\end{column}
 	\end{columns}
 \end{frame}
